--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,19 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
+  table_calendar: ^3.1.0
+  flutter_local_notifications: ^9.1.7
+  firebase_messaging: ^14.7.15
+  flutter_timezone: ^1.0.4
+  http: ^0.13.4
+  image: ^3.0.8
+  path_provider: ^2.0.0
+  device_info_plus: ^9.1.2
+  flutter_background_service: ^2.0.0
+  shared_preferences: ^2.0.0
+  cron: ^0.4.0
+
+
 
 dev_dependencies:
   flutter_test:
