--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,29 @@ dependencies:
   flutter_local_notifications: ^9.1.7
   firebase_messaging: ^14.7.15
   flutter_timezone: ^1.0.4
-  http: ^0.13.4
   image: ^3.0.8
   path_provider: ^2.0.0
   device_info_plus: ^9.1.2
   flutter_background_service: ^2.0.0
   shared_preferences: ^2.0.0
   cron: ^0.4.0
+  google_maps_flutter: ^2.5.3
+  google_maps_flutter_web: ^0.5.4+3
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+  location: ^5.0.3
+  flutter_polyline_points: ^1.0.0
+  freezed: ^2.3.2
+  dio: ^5.0.3
+  flutter_typeahead: ^4.3.7
+  geolocator: ^9.0.2
+  http: ^0.13.5
+  google_fonts: ^4.0.3
+  permission_handler: ^10.2.0
+  google_maps_cluster_manager: ^3.0.0+1
+  fluster: ^1.2.0
+
+
 
 
 
@@ -62,6 +78,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
